# lip-flip

./: color_correction.ipynb  laplacian_blend.py
.ipynb_checkpoints/: Lip-Flip-Application-checkpoint.ipynb  color_correction-checkpoint.ipynb  flip_blend-Copy1-checkpoint.ipynb  flip_blend-checkpoint.ipynb  lip-flip-checkpoint.ipynb
LipFlip_cpp_code/src/: CMakeLists.txt  DetectionTools.cpp  LaplacianBlending.cpp
temp/: 2_colorcallibration.ipynb  flip_blend-Copy1.ipynb  lip-flip.ipynb
temp/LipFlip_cpp_code/src/: ImageTools.cpp  main.cpp
temp/LipFlip_cpp_code/src/include/: DetectionTools.hpp  ImageTools.hpp  LaplacianBlending.hpp
